[gd_scene load_steps=8 format=3 uid="uid://bnfdx6f040v6o"]

[ext_resource type="Script" uid="uid://b13vi3pnd5nbx" path="res://MiniGames/RPS/game_logic.gd" id="1_jhs26"]
[ext_resource type="Texture2D" uid="uid://cfrikjpl0jnos" path="res://MiniGames/RPS/RPSart/RockCLEAR.png" id="2_vhjm5"]
[ext_resource type="Texture2D" uid="uid://dexe0x80je7s0" path="res://MiniGames/RPS/RPSart/PaperCLEAR.png" id="3_ey1fp"]
[ext_resource type="Texture2D" uid="uid://cmi35cjjkj6lq" path="res://MiniGames/RPS/RPSart/ScissorsCLEAR.png" id="4_j4kxj"]
[ext_resource type="AudioStream" uid="uid://dycdlww6ggy2" path="res://MiniGames/RPS/click.wav" id="5_wm7bo"]
[ext_resource type="AudioStream" uid="uid://djvqcgnddm6ng" path="res://MiniGames/RPS/376318__jimhancock__tada.wav" id="6_mkvcw"]
[ext_resource type="AudioStream" uid="uid://b7vr6ovv3pkja" path="res://MiniGames/RPS/159408__noirenex__life-lost-game-over.wav" id="7_blm2i"]

[node name="Game" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 115.0
offset_bottom = 119.0
script = ExtResource("1_jhs26")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
visibility_layer = 2
layout_mode = 0
offset_left = 409.0
offset_top = 420.0
offset_right = 799.0
offset_bottom = 645.0
scale = Vector2(1.025, 1.025)

[node name="RockButton" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_vhjm5")
stretch_mode = 3

[node name="PaperButton" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ey1fp")
stretch_mode = 3

[node name="ScissorsButton" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_j4kxj")
stretch_mode = 3

[node name="ResultLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 377.0
offset_top = 399.0
offset_right = 837.0
offset_bottom = 439.0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 29
text = "AHHH!! CHOOSE SOMETHING"
horizontal_alignment = 1
uppercase = true

[node name="OpponentChoiceIcon" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = -1
anchor_left = 4.33043
anchor_top = 1.26891
anchor_right = 5.42609
anchor_bottom = 1.89916
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Control"]
wait_time = 1.5
one_shot = true

[node name="TimerLabel" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="--Sounds--" type="Node" parent="Control"]

[node name="WinSfx" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("6_mkvcw")
volume_db = -23.31

[node name="ClickSfx" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("5_wm7bo")

[node name="NoWinSfx" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("7_blm2i")
volume_db = -11.534
pitch_scale = 1.1

[connection signal="pressed" from="Control/HBoxContainer/RockButton" to="Control" method="_on_rock_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/PaperButton" to="Control" method="_on_paper_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/ScissorsButton" to="Control" method="_on_scissors_button_pressed"]
[connection signal="timeout" from="Control/Timer" to="Control" method="_on_timer_timeout"]
